fix overflow

--- a/PFML/CalculatorOne/src/components/Form/index.scss
+++ b/PFML/CalculatorOne/src/components/Form/index.scss
@@ -1,5 +1,11 @@
 @import "./node_modules/@massds/mayflower-react/es/components/styles/global";
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+
 .ma__label--small {
 	font-size: 1em;
 }
